compiler/test/compilable/imports/depsOutput21238_qux.d
module imports.depsOutput21238_qux;
