compiler/test/fail_compilation/extra-files/fail6592.d
module test;

import std.foo;
